Adds service model, views and templates

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
     dj111: django>=1.11,<1.12
     dj20: django>=2.0,<2.1
     dj21: django>=2.1,<2.2
+    pillow
 commands = python manage.py test
 
 [testenv:isort]
